// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setPortfolioId dispatches correction action / payload 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "online",
    },
    "type": "SET_PORTFOLIO_TYPE",
  },
  Object {
    "payload": Object {
      "id": "22",
    },
    "type": "SET_PORTFOLIO_ID",
  },
]
`;

exports[`setPortfolioType dispatches correction action / payload 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "online",
    },
    "type": "SET_PORTFOLIO_TYPE",
  },
]
`;
